--- a/package.json
+++ b/package.json
@@ -1,15 +1,15 @@
 {
-   "name": "suhail-md",
+   "name": "I'm Bilal king 👑",
    "version": "1.3.1",
-   "description": "Multi device whatsapp bot by SuhailTechInfo.",
+   "description": "Multi device whatsapp bot by I'm Bilal king 👑.",
    "main": "index.js",
    "type": "commonjs",  
    "scripts": {
             "run": "pm2 start . --deep-monitoring --attach --name Suhail || node .",
-            "start": "pm2 start . --attach --name Suhail",
-            "stop": "pm2 stop Suhail"
+            "start": "pm2 start . --attach --name I'm Bilal king 👑",
+            "stop": "pm2 stop I'm Bilal king 👑"
    },
-   "author": "SuhailTechInfo",
+   "author": "I'm Bilal king 👑",
    "license" :"Apache-2.0",
    "dependencies": { 
              "@adiwajshing/keyed-db": "^0.2.4",
@@ -71,8 +71,8 @@
    },
    "repository": {
       "type": "git",
-      "url": "git+https://github.com/SuhailTechInfo/Suhail-Md.git"
+      "url": "git+https://github.com/iamdevilking/Suhail-Md"
    },
-   "bugs": { "url": "https://github.com/SuhailTechInfo/Suhail-Md/issues" },
-   "homepage": "https://github.com/SuhailTechInfo/Suhail-Md#readme"
+   "bugs": { "url": "https://github.com/iamdevilking/Suhail-Md" },
+   "homepage": "https://github.com/iamdevilking/Suhail-Md"
 }
